--- a/css/map-stylesheet.css
+++ b/css/map-stylesheet.css
@@ -1,5 +1,11 @@
- html, body, #map {
+ html, body{
         height: 100%;
         margin: 0px;
         padding: 0px
-      }
+}
+
+#map {
+	height: 100%;
+    margin: 0px;
+    padding: 0px
+}
