--- a/css/map-stylesheet.css
+++ b/css/map-stylesheet.css
@@ -7,15 +7,16 @@
 #map {
 	height: 100%;
 	width: 75%;
-	float: right;
+	float: left;
     margin: 0px;
     padding: 0px
 }
 
 #directions {
-	background-color: black;
+	overflow: auto;
 	width: 25%;
-	height: 100%;
-	float: left;
+	float: right;
 	color: #ffffff;
+	overflow-y: scroll;
+	height: 100vh
 }
