--- a/css/interface.css
+++ b/css/interface.css
@@ -5,9 +5,11 @@ html, body, h1, h2, h3, ul, li, a, p, header, button, div {
 	margin: 0;
 }
 
-.class1 {
-	background-color: #f0f0f0;
-	color: white;
+.vehicle {
+	background-color: #33cccc;
+	color: #666699;
+	font-size: 20px;
+	font-family: "Arial";
 	padding: 10px 20px; 
 }
 
@@ -16,8 +18,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	background-color: #f0f0f0;
-	font-family: Helvetica, Arial, sans-seif;
-	font-size: 20px;
+	font-size: 50px;
 }
 
 li a {
@@ -35,4 +36,75 @@ aside {
 
 footer {
 	clear: both;
+}
+
+body
+{
+	padding: 50px;
+}
+
+.animate
+{
+	transition: all 0.1s;
+	-webkit-transition: all 0.1s;
+}
+
+.action-button
+{
+	position: relative;
+	padding: 10px 10px;
+	border-radius: 15px;
+	font-family: 'Pacifico', cursive;
+	font-size: 40px;
+	color: #FFF;
+	text-decoration: none;	
+}
+
+.blue
+{
+	background-color: #3498DB;
+	border-bottom: 5px solid #2980B9;
+	text-shadow: 0px -2px #2980B9;
+}
+
+.red
+{
+	background-color: #E74C3C;
+	border-bottom: 5px solid #BD3E31;
+	text-shadow: 0px -2px #BD3E31;
+}
+
+.green
+{
+	background-color: #82BF56;
+	border-bottom: 5px solid #669644;
+	text-shadow: 0px -2px #669644;
+}
+
+.yellow
+{
+	background-color: #F2CF66;
+	border-bottom: 5px solid #D1B358;
+	text-shadow: 0px -2px #D1B358;
+}
+
+.action-button:active
+{
+	transform: translate(0px,5px);
+  -webkit-transform: translate(0px,5px);
+	border-bottom: 5px solid;
+}
+
+.small {
+    font-size: 75%;
+    width: 120px;
+}
+
+.medium {
+    font-size: 100%;
+}
+
+.large {
+    font-size: 200%;
+    padding: 60px 190px;
 }
