--- a/css/interface.css
+++ b/css/interface.css
@@ -10,8 +10,16 @@ html {
 	background-size: cover;
 }
 
+body {
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 40px;
+}
+
 h1 {
 		position: relative;
+		padding-bottom: 30px;
 		font-size: 100px;
 		font: bold italic 3em/1em Impact, Charcoal, sans-serif;
 		color: #ff3300;
@@ -20,18 +28,6 @@ h1 {
 		-webkit-text-stroke: 1px white;
 	}
 
-	
-
-body {
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	font-size: 40px;
-}
-
-.button_table {
-	text-align: center;
-}
 
 .desc {
 	text-align: center;
@@ -96,7 +92,7 @@ body {
 
 .small {
     font-size: 75%;
-    width: 120px;
+    width: 100px;
 }
 
 .medium {
@@ -105,5 +101,5 @@ body {
 
 .large {
     font-size: 200%;
-    padding: 60px 190px;
+    padding: 60px 150px;
 }
